# regex-compress

./: regex-compress.cabal  stack.yaml
src/: Main.hs
