name:                regex-compress
version:             0.1.0.0
-- synopsis:
-- description:
author:              Roger Curley
maintainer:          rocurley@gmail.com
copyright:           2019 Roger Curley
build-type:          Simple
cabal-version:       >=1.10

executable regex-compress
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , safe
                       , containers
  ghc-options: -Wall -Werror
